# zalg

./: CMakeLists.txt
docs/: style.txt
examples/: CMakeLists.txt
examples/dynamic_array/: main.c
examples/linked_list/: main.c
examples/list/: main.c
include/: data_type.h  type.h
include/structures/: dynamic_array.h  linked_list.h  list.h
src/: data_type.c  type.c
src/structures/: dynamic_array.c  linked_list.c  list.c
tools/: example
